src/test/resources/30/expanded/valid/issue615-langtags/EPUB/nav.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="la" lang="la"
	xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<title>Lorem Ipsum</title>
		<link type="text/css" rel="stylesheet" href="style.css" />
	</head>
	<body>
		<h1>Lorem Ipsum</h1>
		<section>
			<h2>Table of Contents</h2>
			<nav epub:type="toc">
				<ol>
					<li><a href="hawaian.xhtml">Hawaian</a></li>
					<li><a href="hebrew.xhtml">Hebrew</a></li>
				</ol>
			</nav>
		</section>
	</body>
</html>
