src/test/resources/30/expanded/invalid/dict-single-nodictcontent/EPUB/dict.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
	xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<title>Dictionary</title>
		<link type="text/css" rel="stylesheet" href="style.css" />
	</head>
	<body>
		<h2>English Monolingual EPUB Dictionary Example</h2>
		<article id="dragon">
			<dfn title="dragon">drag·on</dfn>
			<span lang="en-fonipa">/ˈdrægən/</span>
			<span >noun</span>, <em>pl</em>
			<strong>-ons</strong>
			<span>[count]</span>
			<span> : an imaginary animal that can breathe out fire and looks like a
				very large lizard with wings, a long tail, and large claws</span>
		</article>
	</body>
</html>
